# rust-template

./: .gitignore  .pre-commit-config.yaml  .rustfmt.toml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  cargo-generate.toml  cliff.toml
.github/workflows/: build.yml
src/: error.rs
