[package]
edition = "2024"
license = "MIT"
name = "{{project-name}}"
version = "0.1.0"
readme = "README.md"
authors = ["{{author}} <{{email}}>"]
repository = "https://github.com/{{github-username}}/{{project-name}}"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
codegen-units = 1
lto = "fat"
panic = "abort"
strip = true

[profile.profiling]
debug = "full"
inherits = "release"
strip = false

[lib]
name = "{{project-name}}"
crate-type = ["{{crate_type}}"]

[dependencies]
anyhow = "1.0.97"
thiserror = "2.0.12"
