[package]
name = "{{ project-name }}"
authors = ["{{author}} <{{email}}>"]
edition = "2024"
license = "MIT"
readme = "README.md"
repository = "https://github.com/{{github-username}}/{{project-name}}"
version = "0.1.0"
documentation = "https://docs.rs/"
description = """

"""
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
codegen-units = 1
lto = "fat"
panic = "abort"
strip = true

[profile.profiling]
debug = "full"
inherits = "release"
strip = false

[dependencies]
anyhow = "1.0.97"
thiserror = "2.0.12"
