[package]
authors = ["{{author}} <{{email}}>"]
description = """

"""
documentation = "https://docs.rs/"
edition = "2024"
license = "MIT"
name = "Rust Template"
readme = "README.md"
repository = "https://github.com/{{github-username}}/{{project-name}}"
version = "0.1.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
codegen-units = 1
lto = "fat"
panic = "abort"
strip = true

[profile.profiling]
debug = "full"
inherits = "release"
strip = false

[dependencies]
anyhow = "1.0.97"
thiserror = "2.0.12"
